# platform.core.appfw.slp-pkgmgr

./: CMakeLists.txt
client/: CMakeLists.txt  pkgmgr.pc.in
client/include/: comm_client.h  package-manager.h
client/src/: comm_client_gdbus.c  pkgmgr.c  pkgmgr_client_connection.c  pkgmgr_client_debug.h  pkgmgr_client_internal.c  pkgmgr_client_internal.h
installer/: CMakeLists.txt  pkgmgr-installer.pc.in  pkgmgr_installer.c  pkgmgr_installer.h  pkgmgr_installer_config.h  pkgmgr_installer_error.h  pkgmgr_installer_info.h  pkgmgr_installer_signal_agent.c  pkgmgr_installer_type.h
packaging/: pkgmgr-installer-signal-agent.socket  pkgmgr-installer-signal-agent@.service  pkgmgr-installer-signal-agent@.socket  pkgmgr.spec
types/: CMakeLists.txt  pkgmgr-types.pc.in
types/include/: package-manager-types.h
